# valley-k-small

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  archives  artifacts  docs  pyproject.toml  reports  requirements.txt  schemas  site  skills  src
docs/: README.md  RESEARCH_SUMMARY.md  agentreport.md
platform/: README.md
reports/: README.md  _audit_all_tex_results.json  _audit_python_results.json  report_registry.yaml
schemas/: agent_sync_v1.schema.json  archive_index.schema.json  book_chapter_v1.schema.json  book_manifest_v1.schema.json  report_registry.schema.json  web_report.schema.json
scripts/: README.md  _compat.py  archive_report_runs.py  audit_reports.py  book_blueprint.py  build_agent_pack.py  build_agent_sync.py  build_book_backbone.py  build_book_content.py  build_glossary.py  build_publication_pdf.py  build_three_deliverables.py  build_web_data.py  check_docs_paths.py  check_legacy_usage.py  cleanup_local.py  ka  keepalive  loop_ctl.sh  loop_supervisor.sh  migrate_report_names.py  multiagent_optimize_loop.py  normalize_artifact_paths.py  prune_legacy_artifacts.py  report_registry.py  reportctl.py  run_content_iteration.py  run_openclaw_review.py  update_research_summary.py  validate_archives.py  validate_bilingual_quality.py  validate_registry.py  validate_web_data.py
site/: package-lock.json  package.json  tsconfig.json
tests/: test_archive_schema.py  test_canonical_artifacts.py  test_compare_report_consolidation.py  test_compat_aliases.py  test_docs_paths.py  test_grid2d_directional_barrier.py  test_grid2d_one_two_target_gating.py  (+10 more)
(+1315 files in other folders)
