[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valley-k-small"
version = "0.0.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pytest",
  "jsonschema",
  "PyYAML",
  "ruff",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "build",
  "archives",
  ".venv",
  ".venv312",
  ".venv_py314_broken",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
